--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -49,7 +49,7 @@ button:hover {
 }
 
 #workspaces button {
-    padding: 0 5px;
+    padding: 0 10px;
     background-color: transparent;
     color: #ffffff;
 }
@@ -65,6 +65,10 @@ button:hover {
 
 #workspaces button.urgent {
     background-color: #eb4d4b;
+}
+
+#workspaces button.active {
+    background-color: #64727D;
 }
 
 #mode {
