change wlogout logout to exit hyprland

--- a/.config/wlogout/style.css
+++ b/.config/wlogout/style.css
@@ -29,7 +29,7 @@ button:focus, button:active, button:hover {
     background-image: image(url("/usr/share/wlogout/icons/lock.png"), url("/usr/local/share/wlogout/icons/lock.png"));
 }
 
-#logout {
+#exitHyprland {
     background-image: image(url("/usr/share/wlogout/icons/logout.png"), url("/usr/local/share/wlogout/icons/logout.png"));
 }
 
